update County Maps. Maps should be 70x30 tiles.

--- a/contaePages/naContae23.html
+++ b/contaePages/naContae23.html
@@ -8,34 +8,35 @@
     <div id="mapdata">
 
     
-~~~~~~~~~~~~~~~~~~~~~~~rrrrrrr~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~rr.....rrr~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~rr.........~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~..r.........~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~...rrrrr..........~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~...***.rr*...............~~~~~~~~~
-~~~~~~~~~~~~~~~~~...**rrrr.***..............~~~~~~~~
-~~~~~~~~~~~~~~~~~...*rr..rr..*******...........~~~~~
-~~~~~~~~~~~~~~~~~...rr....r..rrrrrr******...........
-~~~~~~~~~~~~~~~~rrrrr..*..rrr.....rrrr..****........
-~~~~~~~~~~~~~~~~.......*...rr..^^^...rr....**.......
-~~~~~~~~~~~~~~~~.......*....rrrr.^^^...r....**....~~
-~~~....~~~~~~~~......*****........^...rr.....*...~~~
-~.........~~.......***...***.....^^.rrr.....*....~~~
-~.................**.......**.^^^^..r.....***...~~~~
-~.................*......^^^*^^.....r....**....~~~~~
-~...*...................^^^^**^.....r...**....~~~~~~
-...**....................^^^^**^....rr.**....~~~~~~~
-...*....................^^^^^^***^***rr.....~~~~~~~~
-..*.....................^^^^^^^^***...rrrr..~~~~~~~~
-..*......********......^^^^.^^^**^^......rr~~~~~~~~~
-..**....**......***....^^^^^^^**.^^^^....~~~~~~~~~~~
-~..*...**.........***.......***^^^^^^..~~~~~~~~~~~~~
-~...****...~~~~......**...***.^^^^^.~~~~~~~~~~~~~~~~
-~~...*...~~~~~~~~......****^^^^.~~~~~~~~~~~~~~~~~~~~
-~~......~~~~~~~~~~~........^.~~~~~~~~~~~~~~~~~~~~~~~
-~~~...~~~~~~~~~~~~~~~.......~~~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~~~..~~~~~~~~~~~~~~~~~~~~~~~~~~
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrrrrrrrxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrr.....rrrxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrr.........xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..r.........xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...rrrrr..........xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxx...***.rr*...............xxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx...**rrrr.***..............xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx...*rr..rr..*******...........xxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx...rr....r..rrrrrr******...........xxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxrrrrr..*..rrr.....rrrr..****........xxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxx.......*...rr..^^^...rr....**.......xxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxx.......*....rrrr.^^^...r....**....xxxxxxxxx
+xxxxxxxxxx~~~....~~~~~~~~......*****........^...rr.....*...xxxxxxxxxx
+xxxxxxxxxx~.........~~.......***...***.....^^.rrr.....*....xxxxxxxxxx
+xxxxxxxxxx~.................**.......**.^^^^..r.....***...xxxxxxxxxxx
+xxxxxxxxxx~.................*......^^^*^^.....r....**....xxxxxxxxxxxx
+xxxxxxxxxx~...*...................^^^^**^.....r...**....xxxxxxxxxxxxx
+xxxxxxxxxx...**....................^^^^**^....rr.**....xxxxxxxxxxxxxx
+xxxxxxxxxx...*....................^^^^^^***^***rr.....xxxxxxxxxxxxxxx
+xxxxxxxxxx..*.....................^^^^^^^^***...rrrr..xxxxxxxxxxxxxxx
+xxxxxxxxxx..*......********......^^^^.^^^**^^......rrxxxxxxxxxxxxxxxx
+xxxxxxxxxx..**....**......***....^^^^^^^**.^^^^....xxxxxxxxxxxxxxxxxx
+xxxxxxxxxx~..*...**.........***.......***^^^^^^..xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx~...****...~~~~......**...***.^^^^^.xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx~~...*...~~~~~~~~......****^^^^.~~~~~~~~~~~~~~~~~~~~xxxxxxx
+xxxxxxxxxx~~......~~~~~~~~~~~........^.~~~~~~~~~~~~~~~~~~~~~~~xxxxxxx
+xxxxxxxxxx~~~...~~~~~~~~~~~~~~~.......~~~~~~~~~~~~~~~~~~~~~~~~xxxxxxx
+xxxxxxxxxx~~~~~~~~~~~~~~~~~~~~~~~~..~~~~~~~~~~~~~~~~~~~~~~~~~~xxxxxxx
+xxxxxxxxxx~~~~~~~~~~~~~~~~~~~~~~~~..~~~~~~~~~~~~~~~~~~~~~~~~~~xxxxxxx
 
 
     </div>
